Source/WebCore: [chromium] Implement Brightness and Contrast filters on composited layers.  Fix Saturation filter. https://bugs.webkit.org/show_bug.cgi?id=78527

Reviewed by Kenneth Russell.

Will be covered by existing tests in css3/filters, when enabled.

* platform/graphics/chromium/cc/CCRenderSurfaceFilters.cpp:
(WebCore::CCRenderSurfaceFilters::apply):

LayoutTests: Unskip the css3/filters tests, so we can get some baselines off the
bots.
https://bugs.webkit.org/show_bug.cgi?id=78527

Reviewed by Kenneth Russell.

* platform/chromium/test_expectations.txt:


Canonical link: https://commits.webkit.org/95468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107611 268f45cc-cd09-0410-ab3c-d52691b4dbfc